assets/css/style.css
body, html {
	height: 100%;	
	scroll-behavior: smooth;
}

/* .sticky {
	position: fixed;
	top: 0;
	width: 100%;
	padding-top: 0;
	z-index: 500;
} */

/*Background image style**/
.hero-image {
	width: 100wh;
	color: #fff;
	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
	background-size: 400% 400%;
	-webkit-animation: Gradient 15s ease infinite;
	-moz-animation: Gradient 15s ease infinite;
    animation: Gradient 15s ease infinite;
    height: 50%;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
  }


@-webkit-keyframes Gradient {
	0% {
		background-position: 0% 50%
	}
	50% {
		background-position: 100% 50%
	}
	100% {
		background-position: 0% 50%
	}
}

@-moz-keyframes Gradient {
	0% {
		background-position: 0% 50%
	}
	50% {
		background-position: 100% 50%
	}
	100% {
		background-position: 0% 50%
	}
}

@keyframes Gradient {
	0% {
		background-position: 0% 50%
	}
	50% {
		background-position: 100% 50%
	}
	100% {
		background-position: 0% 50%
	}
}

/* headings */
h1 {
	margin: 0;
	margin-top: 1.5em;
	font-family: 'Abril Fatface', cursive;
	font-weight: 300;
	text-align: center;
	position: absolute;
	right: 0;
    left: 0;
    text-shadow: 3px 3px 3px black;
  
}

h2 {
	font-family: 'Teko', sans-serif;
}

/* card image style */
.card,
.carousel .carousel-item {
	width: 450px;
	height: 500px;
}

.card-image {
    height: 75%;
    overflow: hidden;
    position: relative;
}

.carousel .carousel-item {
	opacity: 1 !important;
}

#burger-img {
	top: -200px !important;
}

/* Nav style */
.nav-wrapper {
    text-align: center;
    text-decoration: none;
    top: 75%;
    position: relative;
   
}

.nav-a {
    color: white;
    padding: 20px;
	font-size: 24px;
	font-family: 'PT Serif', serif;
	transition: all .2s ease-in-out !important;
}

.nav-a:hover {
	transform: scale(1.1) !important;
    cursor: pointer;
	text-shadow: 3px 3px 3px black;
}

#nav-links {
    display: inline-flex;
}

/* Carousel style*/
.section-1 {
	height: 700px !important;
}

.carousel {
	overflow: inherit;
}

.card-content .card-title {
    display: block;
    line-height: 32px;
    margin-bottom: 8px;
    text-align: center;
	font-family: 'Abril Fatface', cursive;
}

.card-content p {
    margin: 0;
    text-align: center;
	font-size: 18px;
	font-family: 'PT Serif', serif;
	line-height: 1.3;
}

.card-content a {
	color: darkblue !important;
}

.card-content a:hover {
	color: lightskyblue !important;
}

.card-reveal .card-title {
    cursor: pointer;
    display: block;
	font-family: 'Abril Fatface', cursive;
    padding: 20px;
	line-height: 1.3;
}

.card-reveal p {
	font-family: 'PT Serif', serif;
    padding: 20px;
}

.activator {
	top: -85px !important;
}

/* about me image */
#ashram {
	width: 100%;
    display: block;
    margin: auto;
    text-align: center;

}

/* Social Media section-4 style */

.social-media img {
	height: 100px;
}

#youtube-logo {
	width: 150px;
}

#yoga-logo {
	text-align: center;
	display: block;
	margin: auto;
	width: 100%;
}

footer {
	margin-top: auto;
}

/* Image Overlay style starts here */

/* Main container */
.overlay-image {
	position: relative;
	width: 100%;
   }
   /* Original image */
   .overlay-image .image {
	display: block;
	width: 100%;
	height: auto;
   }
   /* Original text overlay */
   .overlay-image .text {
	color: #000;
	font-size: 32px;
	font-family: 'Anton', sans-serif;
	line-height: 1.5em;
	text-shadow: 2px 2px 2px #fff;
	text-align: center;
	position: absolute;
	top: 15%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 80%;
   }

   /********* Overlay on hover *******/
/* New overlay on hover */
.overlay-image .hover {
	position: absolute;
	top: 0;
	height: 100%;
	width: 100%;
	opacity: 0;
	transition: .5s ease;
	cursor: pointer;
   }
   /* New overlay appearance on hover */
   .overlay-image:hover .hover {
	opacity: 1;
   }

   /********* Background and text only overlay on hover *******/
.overlay-image .normal {
	transition: .5s ease;
   }
   .overlay-image:hover .normal {
	opacity: 0;
   }

   .overlay-image .hover {
	background-color: rgba(0, 0, 0, 0.5);
   }

   .overlay-image .hover .text {
	text-shadow: 2px 2px 2px #000;
	color: #fff;
	font-size: 24px;
	font-family: 'PT Serif', serif;
	top: 50%;
}

/* contact syle */

.contact p {
		text-align: right;
		font-family: 'Abril Fatface', cursive;
		position: relative;
		bottom: 225px;
		line-height: 2;
		font-size: 24px;
	}

.contact a {
	color: black;
}

.contact a:hover {
	color: darkblue;
}

/* Media Queries */
@media screen and (max-width: 640px){
    .container {
		max-width: 100%;
		overflow: inherit;
	}
	#nav-links {
    	display: block;
	}
	.section-1 {
		height: 700px !important;
	}
	h1 {
		margin-top: 2em;
	}
	.nav-wrapper {
		top: 60%;
	}
	.carousel {
		overflow: visible;
	}
	.card {
		margin-top: 3em;
	}
	.hero-image {
		height: 85%
	}

	.about-me {
		height: 80%;
	}

	.overlay-image .text {
		font-size: 20px;
		top: 15%;
	}
	.overlay-image .hover .text {
		font-size: 15px;
	}

	.contact {
	height: 80%;
	padding-top: 75px;
	}

	.contact p {
		text-align: center;
		top: 0;
		font-size: 20px;
	}
	.social-media img {
		width: 30px;
		height: auto;
		padding-top: 100px;
		
	}
	
	#youtube-logo {
		width: 40px;
		height: auto;
	}
	}

	@media screen and (max-width: 768px){

		h1 {
			margin-top: 2.5em;
		}
		.about-me {
			height: 100%;
		}
	
		#yoga-logo {
			width: 100%;
			position: relative;
			left: 20px;
		}
		.contact {
			height: 80%;
			padding-top: 75px;
		}
	
		.contact p {
			text-align: center;
			top: -25px;
		}
	
		.social-media img {
			width: 30px;
			height: auto;
			padding-top: 75px;
		}
	
		#youtube-logo {
			width: 70px;
			height: auto;
	
		}
		}

		@media screen and (min-width: 2000px) {
			.contact {
				height: 100%;
				padding-top: 20%;
				
				}
		}
	

